[package]
name = "my-tb"
version = "0.1.0"
authors = ["whitek <likeccpo@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.0"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.91"
rust-crypto = "0.2.36"
reqwest = {version="0.11.4", features=["json"]}
serde_with = "2.0.1"
thiserror = "1.0.37"

[build-dependencies]
slint-build = "1.0.0"
